--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         },
 		{
 			"name": "kace echo",
-			"email": "mark.reyes@ttu.edu"
+			"email": "dickstra@cuvox.de"
 		}
     ],
     "require": {
